--- a/FoodDeliveryApp/FoodDelivery.Web/Views/Shared/_Layout.cshtml
+++ b/FoodDeliveryApp/FoodDelivery.Web/Views/Shared/_Layout.cshtml
@@ -132,6 +132,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DeliveryOrders" asp-action="Index">Delivery Cart</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pets" asp-action="Index">Partner Pet Shop</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
